--- a/app/.env.example
+++ b/app/.env.example
@@ -1,5 +1,5 @@
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
-MYSQL_USER=root
+MYSQL_USER=root@localhost
 MYSQL_PASS=1234
-MYSQL_DB=test
+MYSQL_DB=lacomanda
